--- a/CB.html
+++ b/CB.html
@@ -103,7 +103,7 @@ Storytime{
 	<body style="background-color:red">
 		<img src="https://listen2myheartspeak.files.wordpress.com/2012/07/happy_face_.jpg"/>
 		<p>It's Cole. Check out my websites below.</p><br/><br/>
-		<p><div>
+		<p><article><div>
 			<a href="http://swag0.github.io/Happyfaces.html">Happy Faces</a>
 		</div></p>
 	
@@ -122,8 +122,8 @@ Storytime{
 	<p>	<Storytime>
 		<a href="https://thimbleprojects.org/swag00/196615">Story Time!</a>
 		</Storytime></p>
-	     
-	<iframe allowtransparency="true" width="500" height="443" src="//scratch.mit.edu/projects/embed/116564429/?autostart=false" frameborder="0" allowfullscreen></iframe>
+	     </article>
+	<iframe allowtransparency="true" width="150" height="146" src="//scratch.mit.edu/projects/embed/116564429/?autostart=false" frameborder="0" allowfullscreen></iframe>
 
 
 		
